Fix issue when there are ampersands in tab title.

BUG: 121782 

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=537524